Fix horizontal scroll on mobile
The breadcrumb and code block elements were causing the page to have
a horizontal scrollbar on mobile due to their length.

--- a/content/style.css
+++ b/content/style.css
@@ -134,6 +134,7 @@ section > h1, nav, footer {
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: calc(var(--grid-size)/2);
 }
 
@@ -341,7 +342,7 @@ pre > code {
     padding: 0;
     display: flex;
     flex-direction: column;
-    white-space: pre-wrap;
+    overflow-x: scroll;
 }
 
 pre > code::before {
